--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/express": "^4.17.15",
+      "@types/luxon": "^3.2.0",
       "@types/node": "^16.18.11",
       "ts-node": "^10.7.0",
       "typescript": "4.5.2"
@@ -12,6 +13,7 @@
    "dependencies": {
       "body-parser": "^1.19.1",
       "express": "^4.18.2",
+      "luxon": "^3.2.1",
       "mysql": "^2.18.1",
       "node-fetch": "^3.3.0",
       "reflect-metadata": "^0.1.13",
