--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "@types/express": "^4.17.15",
       "@types/luxon": "^3.2.0",
       "@types/node": "^16.18.11",
+      "@types/nodemailer": "^6.4.7",
       "ts-node": "^10.7.0",
       "typescript": "4.5.2"
    },
@@ -16,6 +17,7 @@
       "luxon": "^3.2.1",
       "mysql": "^2.18.1",
       "node-fetch": "^3.3.0",
+      "nodemailer": "^6.9.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.11"
    },
