--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
       "express": "^4.18.2",
       "luxon": "^3.2.1",
       "mysql": "^2.18.1",
-      "node-fetch": "^3.3.0",
       "nodemailer": "^6.9.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.11"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
+      "build": "tsc",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
    }
 }
